2004-07-12  James Turner  <james@worldforge.org>

	* Eris/Entity.cpp: Clean up the protected interface available to
	  people subclassing Entity, by moving many methods to be private.
	  Add a virtual wrapper around the VisibilityChanged signal, so
	  derived classes can easily hook into it.

	* tests/stubServer.cpp: Re-factor the test server to work as a child
	  process via fork(); this simplifies the tests on the client side.

2004-06-12  Al Riddoch  <alriddoch@zepler.org>

	* Fix devel dependencies in rpm spec on glib2-devel.

2004-06-06  Al Riddoch  <alriddoch@zepler.org>

	* Fix devel dependencies in rpm spec.

2004-05-13  Al Riddoch  <alriddoch@zepler.org>

* Remove header files from the library source list, and remove a stray
  space from after a \ which was causing object files to get left out
  of the library.

2004-05-12  James Turner  <james@worldforge.org>

* Record the classNo alloctaed by the objectFactory when registering
  new factory methods
  
* Simplify the type verification logic following the objectFactory
  clean up Al committed.
  
* Add a 'Commander' object to the stub server, in preperation for
  doing a fork() and hence a multi-process test.

2004-05-08  James Turner  <james@worldforge.org>

* Add a compile time toggle at the top of Connecton for send/recv logging.
  This could become a runtime flag in the future, I guess

* Remove some explicit sets of objtype/parents now Atlas is fixed

* Expand the Redispatch base class, now it's being used in anger

* Add a type verification system, which checks recieved objects for
  default constructed items, and issues type lookups as necessary. Seems
  to work pretty well, and engages the Redispatch and Type bind logic
  for the first time.

* Factored out TypeBoundRedispatch into it's own source file, since > 1
  other part of the code now uses it.

* Expand the types and toy world defined by the stub server, and use some
  custom types in key places.
  
* Lots of other tweaks and improvements
  